[gd_scene load_steps=15 format=3 uid="uid://cpejwnvtdvrh1"]

[ext_resource type="Script" uid="uid://bds23ml0n0hjx" path="res://Scripts/Gameplay.gd" id="1_d3lxl"]
[ext_resource type="Script" uid="uid://dh7fift5hwaok" path="res://Scripts/player.gd" id="2_7ekg7"]
[ext_resource type="Texture2D" uid="uid://celo8nwgdm2fm" path="res://Sprites/icon.svg" id="3_awv0y"]
[ext_resource type="Script" uid="uid://bw48yx3t1ou1r" path="res://Scripts/shaking.gd" id="4_7vmq5"]
[ext_resource type="AudioStream" uid="uid://day78oj8vivbh" path="res://Music/Chime, Teminite - Duckstep [NCS Release].mp3" id="5_xeqf3"]
[ext_resource type="Script" uid="uid://cg0vj8u7nuqxa" path="res://Scripts/Conductor.gd" id="6_b7igg"]
[ext_resource type="AudioStream" uid="uid://diy7atojblrft" path="res://Music/243749__unfa__metronome-1khz-weak-pulse.mp3" id="7_tn1f5"]
[ext_resource type="Texture2D" uid="uid://bi401jbeole8n" path="res://Sprites/DuckHalfOpen.png" id="10_h6mcp"]
[ext_resource type="Texture2D" uid="uid://m66nube3htng" path="res://Sprites/DuckMouthClosed.png" id="11_ifd66"]
[ext_resource type="Texture2D" uid="uid://cjip3w3kq1x07" path="res://Sprites/DuckEnraged.png" id="12_c2d8w"]
[ext_resource type="Texture2D" uid="uid://b1met8bqfs6wk" path="res://Sprites/DuckFullyOpen.png" id="13_ksalt"]
[ext_resource type="Script" uid="uid://c4qtlwf3pwmx4" path="res://Scripts/DuckBrain.gd" id="14_xvhne"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0e48y"]
radius = 4.69185

[sub_resource type="SpriteFrames" id="SpriteFrames_kg31f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_h6mcp")
}, {
"duration": 1.0,
"texture": ExtResource("11_ifd66")
}],
"loop": false,
"name": &"DropQuack",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_c2d8w")
}],
"loop": false,
"name": &"Enraged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ifd66")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_h6mcp")
}, {
"duration": 1.0,
"texture": ExtResource("13_ksalt")
}, {
"duration": 1.0,
"texture": ExtResource("10_h6mcp")
}, {
"duration": 1.0,
"texture": ExtResource("13_ksalt")
}, {
"duration": 1.0,
"texture": ExtResource("10_h6mcp")
}, {
"duration": 1.0,
"texture": ExtResource("13_ksalt")
}, {
"duration": 1.0,
"texture": ExtResource("10_h6mcp")
}, {
"duration": 1.0,
"texture": ExtResource("13_ksalt")
}, {
"duration": 1.0,
"texture": ExtResource("10_h6mcp")
}, {
"duration": 1.0,
"texture": ExtResource("13_ksalt")
}, {
"duration": 1.0,
"texture": ExtResource("10_h6mcp")
}, {
"duration": 1.0,
"texture": ExtResource("11_ifd66")
}],
"loop": false,
"name": &"Laugh",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ifd66")
}, {
"duration": 1.0,
"texture": ExtResource("10_h6mcp")
}, {
"duration": 1.0,
"texture": ExtResource("11_ifd66")
}],
"loop": false,
"name": &"Quack",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ifd66")
}, {
"duration": 1.0,
"texture": ExtResource("10_h6mcp")
}, {
"duration": 1.0,
"texture": ExtResource("11_ifd66")
}],
"loop": false,
"name": &"QuackSlower",
"speed": 15.0
}]

[node name="node_2d" type="Node2D"]
script = ExtResource("1_d3lxl")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(459, 534)
scale = Vector2(1, 0.974259)
motion_mode = 1
script = ExtResource("2_7ekg7")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_awv0y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-0.5, -0.599976)
scale = Vector2(6.76, 6.4)
shape = SubResource("CircleShape2D_0e48y")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("4_7vmq5")

[node name="Conductor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_xeqf3")
script = ExtResource("6_b7igg")
bpm = 150
notes_per_beat = 4
beats_per_measure = 4

[node name="StartTimer" type="Timer" parent="Conductor"]

[node name="Tick" type="AudioStreamPlayer2D" parent="Conductor"]
stream = ExtResource("7_tn1f5")

[node name="Duck" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(2216, 286)
scale = Vector2(0.3, 0.326)
sprite_frames = SubResource("SpriteFrames_kg31f")
animation = &"QuackSlower"
offset = Vector2(340, 200)
script = ExtResource("14_xvhne")

[connection signal="life_lost" from="Player" to="Camera2D" method="start_shake"]
[connection signal="tree_exited" from="Player" to="." method="reset_game"]
[connection signal="beatS" from="Conductor" to="Duck" method="duckBeatUpdate"]
[connection signal="measureS" from="Conductor" to="Duck" method="duckMeasureUpdate"]
[connection signal="noteS" from="Conductor" to="Duck" method="duckNoteUpdate"]
